--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,14 @@
             <artifactId>msgpack</artifactId>
             <version>0.6.12</version>
         </dependency>
+
+        <!-- 邮件start -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+        <!-- 邮件end -->
     </dependencies>
 
     <build>
